fix flex alignment for expenses list

--- a/client/src/components/History.module.scss
+++ b/client/src/components/History.module.scss
@@ -20,6 +20,7 @@
 
   .list {
     overflow: auto;
+    flex: 1;
   }
 
   .filterBar {
